# sparse_nn_gpu_benchmark

./: CMakeLists.txt  README.md  cuda_header_file.h  cuda_random_memory_access.cu  cuda_source_test.cu  random_memory_access_benchmark.cu  sequential_memory_benchmark.cu
include/: random_memory.cuh  sequential_memory.cuh
src/: random_memory.cu  sequential_memory.cu
